# deep-rl-wordle

./: LICENSE  README.md  cabal.project
agent/: agent.cabal
agent/app/: Main.hs
agent/src/: DQN.hs
shared/: shared.cabal
shared/src/: Utils.hs
wordle/: wordle.cabal
wordle/app/: Main.hs
wordle/src/: Game.hs
