cabal-version: 3.0
name: agent
version: 0.1.0.0
synopsis: A deep reinforcement learning agent for Wordle
license: MIT
author: Alan Moura, Álvaro Ferrante, Igor Silva, João Victor, Juliana Cabral, Yan Thomas
build-type: Simple

executable agent
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    base ^>=4.18.3.0

  default-language: Haskell2010
