cabal-version: 3.0
name: shared
version: 0.1.0.0
synopsis: Shared utilities for Deep RL Wordle project
license: MIT
author: Alan Moura, Álvaro Ferrante, Igor Silva, João Victor, Juliana Cabral, Yan Thomas
build-type: Simple

library
  exposed-modules: Utils
  hs-source-dirs: src
  build-depends:
    base ^>=4.18.3.0,
    filepath,

  default-language: Haskell2010
